- jackrabbit based implementation is already done